Target/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\PROGRA~1\Java\JDK17~1.0_6\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.8.2.jar;\\NNHSSRV2.hs.sd203.org\sramanathan$\GitHub\unit2Classes\Target
-d
\\NNHSSRV2.hs.sd203.org\sramanathan$\GitHub\unit2Classes\Target\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
\\NNHSSRV2.hs.sd203.org\sramanathan$\GitHub\unit2Classes\Target\TargetViewer.java
<---- end of javadoc command ---->
Loading source file \\NNHSSRV2.hs.sd203.org\sramanathan$\GitHub\unit2Classes\Target\TargetViewer.java...
\\NNHSSRV2.hs.sd203.org\sramanathan$\GitHub\unit2Classes\Target\TargetViewer.java:6: error: ')' expected
        frame.setSize*(400,500);
                          ^
\\NNHSSRV2.hs.sd203.org\sramanathan$\GitHub\unit2Classes\Target\TargetViewer.java:6: error: not a statement
        frame.setSize*(400,500);
                     ^
\\NNHSSRV2.hs.sd203.org\sramanathan$\GitHub\unit2Classes\Target\TargetViewer.java:6: error: not a statement
        frame.setSize*(400,500);
                           ^
\\NNHSSRV2.hs.sd203.org\sramanathan$\GitHub\unit2Classes\Target\TargetViewer.java:6: error: ';' expected
        frame.setSize*(400,500);
                              ^
\\NNHSSRV2.hs.sd203.org\sramanathan$\GitHub\unit2Classes\Target\TargetViewer.java:9: error: not a statement
        frame.set 
             ^
\\NNHSSRV2.hs.sd203.org\sramanathan$\GitHub\unit2Classes\Target\TargetViewer.java:9: error: reached end of file while parsing
        frame.set 
                 ^
\\NNHSSRV2.hs.sd203.org\sramanathan$\GitHub\unit2Classes\Target\TargetViewer.java:11: error: reached end of file while parsing
        
        ^
7 errors
